@@ -15,6 +15,8 @@
         * [BUGFIX]: #3000 Fixed compilation errors for Qt >= 5.5.
         * [BUGFIX]: #2956 Fixed unexpected data refresh when clicking in the right side of value filter field in table window.
         * [BUGFIX]: #2991 #2928 #2929 #2941 #2960 Fixed executing "garbage" query, causing application crash.
+        * [BUGFIX]: #2920 Fixed removing several databases.
+        * [BUGFIX]: #3068 #3066 Fixed database removal confirmation dialog so the message asks about removing it from the list, not deleting it.
 
 [3.0.7]
         * [ADDED]: #2951 Implemented dropdown value picking for foreign key columns in grid view.
